test/sema/typeck/enum/variant-missing-named-field.out
error: Named argument `b` is missing.
--> variant-missing-named-field.dora:6:5
 | }
 | fn f() {
 |     Foo::B(a=1);
       ~~~~~~~~~~~
 | }
 | 
1 error found.
