test/sema/typeck/enum/variant-missing-named-field.dora
enum Foo {
    A,
    B { a: Int, b: Int },
}
fn f() {
    Foo::B(a=1);
}
